feat: make end of game

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.correct {
+  background-color: green;
+}
+
 .animation-shake {
   animation-name: shake;
   animation-duration: 500ms;
